# linnaeus

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
configs/experiments/: example_experiment.yaml  generic_mformer_example.yaml
docs/: DEV.md  FAQ.md  getting_started.md  index.md  installation.md  todo.md
docs/advanced_topics/: autobatch.md  debug_flags.md  development_features.md  hierarchical_approaches.md  index.md  taxonomy_representation.md  training_progress.md
docs/datasets/: dataset_generation.md
docs/dev/: 01_training_loop_and_progress.md  02_scheduling_system.md  03_metrics_and_logging.md  04_model_metadata_and_filtering.md  98_architecture_notes.md  99_design_decisions.md
docs/evaluation/: overview.md  validation.md
docs/inference/: inference_bundle.md  litserve.md  overview.md  running_inference_with_pretrained_models.md
docs/models/: model_complexity_estimates.json  model_system_overview.md  model_zoo.md  model_zoo_scratchpad.md
docs/training/: augmentations.md  auto_resume.md  checkpoint_management.md  data_loading.md  meta_masking.md  metrics.md  multi_task_training.md  null_masking.md  overview.md  phase2_abstention_rl.md  scheduling.md  training_custom_model_example.md
linnaeus/: __init__.py  config.py  main.py  rl_train_abstention.py  train.py  validation.py
linnaeus/aug/: __init__.py  base.py  build.py  factory.py  policies.py  utils.py
linnaeus/evaluation/: eval_config.py  results_logger.py  synthetic_data.py  throughput_tester.py
linnaeus/h5data/: __init__.py  base_prefetching_dataset.py  build.py  ensure_ops_schedule.py  grouped_batch_sampler.py  h5dataloader.py  image_verifier.py  memcache.py  prefetching_h5_dataset.py  prefetching_hybrid_dataset.py  vectorized_dataset_processor.py
linnaeus/ibrida/: ancestral_levels.py
linnaeus/inference/: __init__.py  api_schemas.py  artifacts.py  config.py  handler.py  model_utils.py  postprocessing.py  preprocessing.py
linnaeus/loss/: __init__.py  basic_loss.py  core_loss.py  gradient_weighting.py  gradnorm.py  hierarchical_loss.py  masking.py  taxonomy_label_smoothing.py  utils.py
linnaeus/lr_schedulers/: __init__.py  build.py  multi_lr_scheduler.py
linnaeus/models/: __init__.py  base_model.py  build.py  export.py  mFormerV0.py  mFormerV1.py  model_factory.py
linnaeus/ops_schedule/: __init__.py  early_stop_state.py  ops_schedule.py  training_progress.py
linnaeus/optimizers/: __init__.py  ademamix.py  build.py  multi_optimizer.py  muon.py
linnaeus/rl_env/: README.md  environment.py  policies.py  problem_provider.py  reward_functions.py  verifier.py
linnaeus/tools/: __init__.py  filter_logs.py  inspect_checkpoints.py  update_requirements.py
linnaeus/utils/: autobatch.py  backblaze.py  checkpoint.py  checkpoint_utils.py  config_utils.py  dataset_metadata.py  debug_utils.py  distributed.py  flash_attn_utils.py  hpc_utils.py  meta_utils.py  model_utils.py  param_filters.py  schedule_utils.py  training_consistency.py  unified_filtering.py
setup/: README.md  install_deps.sh  install_deps_simple.sh
tests/: test_autobatch.py  test_gradnorm_mode_heads.py  test_inference_components.py  test_inference_handler.py  test_throughput_tester.py  test_training_metrics.py
tests/rl_env/: test_environment.py  test_policies.py  test_problem_provider.py  test_reward_functions.py  test_verifier.py
tools/: __init__.py  analyze_all_datasets.py  analyze_batch_sizes.py  dataset_analyzer.py  estimate_model_complexity.py  example_data_config.yaml  prepare_inference_bundle.py  run_all_dataset_analysis.sh  simple_validation.py  validate_complexity_estimates.py
tools/docker/: Dockerfile  Dockerfile.optimized  README.md  build.md  build.sh  build_and_push.sh  build_with_timeout.sh  test_build.sh  validate.sh
tools/scripts/: README.md  extract_log_selection.sh  (+2 more)
(+76 files in other folders)
